<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsbycollin.unicardw.MainActivity">

    <!--TODO: Show/Hide Password Button-->

    <Button
        android:layout_marginBottom="104dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/string_buttonLogin"
        android:id="@+id/ID_buttonLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick" />

    <TextView
        android:text="@string/string_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ID_tV_password"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_above="@+id/ID_et_Password"
        android:layout_alignEnd="@+id/ID_tV_username"
        android:layout_marginBottom="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ID_et_Password"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/ID_buttonLogin"
        android:layout_alignStart="@+id/ID_eT_Username" />

    <TextView
        android:text="@string/string_please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ID_textViewPlease"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginBottom="34dp"
        android:layout_alignBottom="@+id/ID_tV_username"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/string_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ID_tV_username"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/ID_eT_Username"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/uni_logo"
        android:id="@+id/ID_iV_uni_logo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/ID_textViewPlease"
        android:elevation="1dp"
        android:paddingBottom="30dp"
        android:contentDescription="UoN Logo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ID_eT_Username"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/ID_tV_password"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:text="@string/string_RememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/id_cB_rememberMe"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
